# testframework-pytest

./: .gitignore  Dockerfile  README.md  docker-compose.yaml  pyproject.toml
.github/: CODEOWNERS
.github/workflows/: test.yml
libs/: constants.py  helper.py
pom/: base_page.py
pom/ikea/: home_page.py
tests/: conftest.py  pytest.ini
tests/fixtures/: base.py  cli.py
tests/web/ikea/: test_ikea.py
tests/web/ikea/pom/: base_page.py  home_page.py
